@@ -1,0 +1,2 @@
+Not much, really. I would like to keep it simple. But if somebody
+   wants to do a GUI, I'll be grateful. 
